--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Simple "Dutch" style calendar with italians holidays:
+
+    $ ./callirhoe.py --layout=sparse --style bw_sparse_custom --rows=1 --cols=2 --month-with-year --no-footer --padding=1 --border=0.5 --lang=IT --with-holidays=holidays/italian_holidays.IT.dat 2024 calendar.pdf
+    
 =============================================
  callirhoe - high quality calendar rendering
         (c) 2012-2015 George Tzoumas
