add --moons to display moon phases in sparse layout

--- a/README
+++ b/README
@@ -1,7 +1,16 @@
-Simple "Dutch" style calendar with italians holidays:
+Modified version of callirhoe to add the following features:
 
-    $ ./callirhoe.py --layout=sparse --style bw_sparse_custom --rows=1 --cols=2 --month-with-year --no-footer --padding=1 --border=0.5 --lang=IT --with-holidays=holidays/italian_holidays.IT.dat 2024 calendar.pdf
+- "--moons" parameter to display moon phases (sparse layour only)
+- italian translations and holidays
+
+Simple "Dutch" style calendar with italians holidays and moons:
+    $ python -m venv venv
+    $ source ven/bin/activate
+    $ pip install # it may require to install external libraries like cairo-dev
+    $ ./callirhoe.py --layout=sparse --style bw_sparse_custom --rows=1 --cols=2 --month-with-year --no-footer --padding=1 --border=0.5 --lang=IT --with-holidays=holidays/italian_holidays.IT.dat --moons 2025 calendar.pdf
     
+Original README:
+
 =============================================
  callirhoe - high quality calendar rendering
         (c) 2012-2015 George Tzoumas
